; ModuleID = '/home/carl/AnghaBench/linux/drivers/scsi/fcoe/extr_fcoe.c_fcoe_hostlist_add.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/scsi/fcoe/extr_fcoe.c_fcoe_hostlist_add.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fc_lport = type { i32 }
%struct.fcoe_interface = type { i32 }
%struct.fcoe_port = type { %struct.fcoe_interface* }

@fcoe_hostlist = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.fc_lport*)* @fcoe_hostlist_add to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @fcoe_hostlist_add(%struct.fc_lport* %0) #0 {
  %2 = alloca %struct.fc_lport*, align 8
  %3 = alloca %struct.fcoe_interface*, align 8
  %4 = alloca %struct.fcoe_port*, align 8
  store %struct.fc_lport* %0, %struct.fc_lport** %2, align 8
  %5 = load %struct.fc_lport*, %struct.fc_lport** %2, align 8
  %6 = call i32 @fcoe_netdev(%struct.fc_lport* %5)
  %7 = call %struct.fcoe_interface* @fcoe_hostlist_lookup_port(i32 %6)
  store %struct.fcoe_interface* %7, %struct.fcoe_interface** %3, align 8
  %8 = load %struct.fcoe_interface*, %struct.fcoe_interface** %3, align 8
  %9 = icmp ne %struct.fcoe_interface* %8, null
  br i1 %9, label %19, label %10

10:                                               ; preds = %1
  %11 = load %struct.fc_lport*, %struct.fc_lport** %2, align 8
  %12 = call %struct.fcoe_port* @lport_priv(%struct.fc_lport* %11)
  store %struct.fcoe_port* %12, %struct.fcoe_port** %4, align 8
  %13 = load %struct.fcoe_port*, %struct.fcoe_port** %4, align 8
  %14 = getelementptr inbounds %struct.fcoe_port, %struct.fcoe_port* %13, i32 0, i32 0
  %15 = load %struct.fcoe_interface*, %struct.fcoe_interface** %14, align 8
  store %struct.fcoe_interface* %15, %struct.fcoe_interface** %3, align 8
  %16 = load %struct.fcoe_interface*, %struct.fcoe_interface** %3, align 8
  %17 = getelementptr inbounds %struct.fcoe_interface, %struct.fcoe_interface* %16, i32 0, i32 0
  %18 = call i32 @list_add_tail(i32* %17, i32* @fcoe_hostlist)
  br label %19

19:                                               ; preds = %10, %1
  ret i32 0
}

declare dso_local %struct.fcoe_interface* @fcoe_hostlist_lookup_port(i32) #1

declare dso_local i32 @fcoe_netdev(%struct.fc_lport*) #1

declare dso_local %struct.fcoe_port* @lport_priv(%struct.fc_lport*) #1

declare dso_local i32 @list_add_tail(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
